tms-spring-boot-template-demo/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: ingressinternal
  name: tms-spring-boot-template2
  labels:
      app: tms-spring-boot-template2
  namespace: tms-dev
spec:
  rules:
  - host: tms-spring-boot-template2.52.209.128.30.xip.io
    http:
      paths:
      - backend:
          serviceName: tms-spring-boot-template2
          servicePort: 80
        path: /
status:
  loadBalancer:
    ingress:
    - ip: 10.20.185.120
